--- a/adir.html
+++ b/adir.html
@@ -170,7 +170,7 @@
           }
           res.push(td.innerText);
         };
-        prompt("Result:", res);
+        main.appendChild(document.createTextNode(res));
       }
 
     </script>
