--- a/adir.html
+++ b/adir.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Adir Countdow</title>
+	<title>Adir Countdown</title>
 	<style type="text/css">
 		#output {		
 	    	background-color: #00000061;
