Migrating to FlipClock

--- a/adir.html
+++ b/adir.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Adir Countdown</title>
 	<style type="text/css">
 		#output {		
-	    	background-color: #00000061;
-	    	font-size: 90px;
-	    	color: white;
-	    	position: absolute;
-	    	left: 12%;
-	    	top: 25%;
-	    	box-shadow: 0px 0px 90px -10px #ff00b1;
+	    	left: 50px;
+	    	top: 50px;
 		}
 	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./flipclock/flipclock.min.js"></script>
+	<link rel="stylesheet" href="./flipclock/flipclock.css">
+
 </head>
 <body>
 <div id="output">ADIR COUNTDOWN</div>
@@ -21,11 +19,13 @@
 <script type="text/javascript">
 	
 	var target = new Date(1546988400000);
-	setInterval(function() {
-		var now = new Date();
-		var output = (target.getTime() - now.getTime());
-		output = Math.round(output / 1000);
-		document.getElementById("output").innerText = output;		
-	},1000);
+	var now = new Date();	
+	var output = (target.getTime() - now.getTime());
+	output = Math.round(output / 1000);
+
+	var clock = $('#output').FlipClock(output,{
+		countdown: true,
+		clockFace: "DailyCounter"
+	});
 
 </script>
