Adidng missing prepositions for 'bewerben'

--- a/de.html
+++ b/de.html
@@ -99,7 +99,7 @@ function loadContent() {
             {"q":"sich bedanken", "a":["bei","für","fuer"]},
             {"q":"beginnen", "a":["mit"]},
             {"q":"sich beschweren", "a":["bei","über","ueber"]},
-            {"q":"sich bewerben", "a":["bei"]},
+            {"q":"sich bewerben", "a":["bei", "als", "für", "fuer"]},
             {"q":"bitten", "a":["um"]},
             {"q":"danken", "a":["für","fuer"]},
             {"q":"denken", "a":["an"]},
