Ajusting shadow + adding padding

--- a/de.html
+++ b/de.html
@@ -32,7 +32,7 @@
             left: 30px;
             top: 30px;
             width: 560px;
-            box-shadow: 10px 10px 34px -10px black;
+            box-shadow: 10px 10px 34px -17  px black;
         }
         button {
             font-family: monospace;
@@ -42,7 +42,8 @@
             position: absolute;
             left: 670px;
             top:30px;
-            box-shadow: 10px 10px 34px -10px black;
+            padding : 10px;
+            box-shadow: 10px 10px 34px -17px black;
         }
     </style>
 </head>
