Adding preposition for vorbereiten

--- a/de.html
+++ b/de.html
@@ -133,7 +133,7 @@ function loadContent() {
             {"q":"sich unterhalten", "a":["mit","über","ueber"]},
             {"q":"sich verlassen", "a":["auf"]},
             {"q":"verzichten", "a":["auf"]},
-            {"q":"sich vorbereiten", "a":["auf"]},
+            {"q":"sich vorbereiten", "a":["auf","fuer","für"]},
             {"q":"warten", "a":["auf"]},
             {"q":"sich wundern", "a":["über","ueber"]},
             {"q":"zweifeln", "a":["an"]}
