Changing input types

--- a/RhythmPractice/index.html
+++ b/RhythmPractice/index.html
@@ -17,7 +17,7 @@
             font-size: 25px;
         }
         input {
-            width: 25px;
+            width: 50px;
             height:30px;
             font-size:20px;
         }
@@ -31,8 +31,8 @@
 <body>
     <br><br>
     <div id="header">
-        Beat Count <input type="text" id="beatCount" value="4">
-        Row Count  <input type="text" id="rowCount"  value="3">
+        Beat Count <input type="number" id="beatCount" value="4">
+        Row Count  <input type="number" id="rowCount"  value="3">
         <button id="goBtn" accesskey="g" onclick="generateBeats();">&#8635;</button>
     </div>
     <div id="main"></div>
