--- a/RhythmPractice/index.html
+++ b/RhythmPractice/index.html
@@ -31,8 +31,8 @@
 <body>
     <br><br>
     <div id="header">
-        Beat Count <input type="number" id="beatCount" value="4">
-        Row Count  <input type="number" id="rowCount"  value="3">
+        Beat Count: <input type="number" id="beatCount" value="4">
+        Row Count:  <input type="number" id="rowCount"  value="3">
         <button id="goBtn" accesskey="g" onclick="generateBeats();">&#8635;</button>
     </div>
     <div id="main"></div>
