--- a/scalegenerator.html
+++ b/scalegenerator.html
@@ -12,10 +12,22 @@
 </head>
 <body>
 <div id="ControlPanel">
-    <input type="checkbox" id="ControlPanel_Debug"    checked>debug                     </input><br>
-    <input type="checkbox" id="ControlPanel_SemiSemi"        >allow subsequent semitones</input><br>
-<!--     <input type="radio" name="ControlPanel_Output" value="INTERVALS" checked>Intervals
-    <input type="radio" name="ControlPanel_Output" value="NOTES"            >Notes<br> -->
+    <input type="checkbox" id="ControlPanel_Debug"    checked>Debug                     </input><br>
+    <input type="checkbox" id="ControlPanel_SemiSemi"        >Allow subsequent semitones</input><br>
+    <select id="ControlPanel_RootNote"> 
+        <option value="C" >C </option>
+        <option value="C#">C#</option>
+        <option value="D" >D </option>
+        <option value="D#">D#</option>
+        <option value="E" >E </option>
+        <option value="F" >F </option>
+        <option value="F#">F#</option>
+        <option value="G" >G </option>
+        <option value="G#">G#</option>
+        <option value="A" >A </option>
+        <option value="A#">A#</option>
+        <option value="B" >B </option>
+    </select>Root Note<br>
     <button id="ControlPanel_Btn" onclick="main()">Generate Scale</button>
 </div>
 <hr>
@@ -123,8 +135,9 @@ function getIntervalArr(allowConsecutiveSemitones) {
 }
 
 function intervalsToNotes(intrvlArr, startingNote) {
-    const NOTES = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B"];
-    return NOTES;
+    const NOTES = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", /* looping */ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];    
+    notePalletToUse = NOTES.slice(NOTES.indexOf(startingNote), NOTES.length);
+    return notePalletToUse;
 }
 
 // ##### MAIN
@@ -137,7 +150,7 @@ function main() {
     print("Intervals [" + arrToString(intervalArr) + "]");
     debug("Sum       [" + safeSumList(intervalArr) + "]");
     
-    notes = intervalsToNotes(intervalArr);
+    notes = intervalsToNotes(intervalArr, ControlPanel_RootNote.value);
     print("Notes     [" + arrToString(notes)       + "]");
 
     // playNotes(notes);
