--- a/scalegenerator.html
+++ b/scalegenerator.html
@@ -18,25 +18,25 @@
 </head>
 <body>
 <div id="ControlPanel">
-    <input type="checkbox" id="ControlPanel_Debug"           >Debug                     </input><br>
-    <input type="checkbox" id="ControlPanel_SemiSemi"        >Allow subsequent semitones</input><br>
+    <input type="checkbox" id="ControlPanel_Debug"           >Debug                     </input><br><br>
+    <input type="checkbox" id="ControlPanel_SemiSemi"        >Allow subsequent semitones</input><br><br>
     <select id="ControlPanel_RootNote">
         <option value="C" >C </option>
-        <option value="C#">C#</option>
+        <option value="C#">C&sharp;</option>
         <option value="D" >D </option>
-        <option value="D#">D#</option>
+        <option value="D#">D&sharp;</option>
         <option value="E" >E </option>
         <option value="F" >F </option>
-        <option value="F#">F#</option>
+        <option value="F#">F&sharp;</option>
         <option value="G" >G </option>
-        <option value="G#">G#</option>
+        <option value="G#">G&sharp;</option>
         <option value="A" >A </option>
-        <option value="A#">A#</option>
+        <option value="A#">A&sharp;s</option>
         <option value="B" >B </option>
-    </select>Root Note<br>
+    </select>Root Note<br><br>
     <button id="ControlPanel_Btn" onclick="main()">Generate Scale</button>
 </div>
-<hr>
+<br><hr><br>
 <div id="Results">
 
 </div>
@@ -71,7 +71,10 @@ function print(msg) {
 }
 
 function arrToString(arr) {
-    return arr.toLocaleString().replaceAll(",",", ");
+    return arr.toLocaleString()
+              .replaceAll(",",", ")
+              .replaceAll("#","♯")
+              .replaceAll("b","♭");
 }
 
 function getRandomInt(min, max) {
