--- a/scalegenerator.html
+++ b/scalegenerator.html
@@ -4,45 +4,80 @@
     <style type="text/css">
         body {
             text-align: center;
-        }
-        #Results {
+            color: white;
+            background-color: #272822;
             font-family: Consolas;
+            font-size: 20px;
+        }
+        #Log {
+            /*font-family: Consolas;*/
         }
         debug {
-            background-color: #F2AEAE;
+            background-color: #F18C8C;
+            color: black;
         }
         log {
-            background-color: #C0E2FF;
+            background-color: #66D9EF;
+            color: black;
         }
         warn {
-            background-color: #EED286;   
+            background-color: #E6DB67;   
+            color: black;
+        }
+        note {
+            background-color: #F92672;
+            padding: 20px;
+            margin: 10px;   
+            display: inline-block;
+            width: 75px;
+            height: 75px;
+            font-size: 40px;
+            line-height: 2;
+        }
+        input {
+            margin: 10px;
+            width: 50px;
+            height: 30px;
+            font-size: 20px;
+            vertical-align: middle;
+        }
+        button {
+            font-size: 25px;
+        }
+        select {
+            font-size: 20px; 
+            margin: 15px;  
+        }
+        #ControlPanel {
+            /*width:400px;*/
         }
     </style>
 </head>
 <body>
 <div id="ControlPanel">
-    <input type="checkbox" id="ControlPanel_Debug"           >Debug                     </input><br><br>
-    <input type="checkbox" id="ControlPanel_SemiSemi"        >Allow subsequent semitones</input><br><br>
+    <br>
+    <input type="checkbox" id="ControlPanel_Debug"           >Debug                     </input><br>
+    <input type="checkbox" id="ControlPanel_SemiSemi"        >Allow subsequent semitones</input><br>
     <select id="ControlPanel_RootNote">
         <option value="C" >C </option>
-        <option value="C#">C&sharp;</option>
+        <option value="C#">C#</option>
         <option value="D" >D </option>
-        <option value="D#">D&sharp;</option>
+        <option value="D#">D#</option>
         <option value="E" >E </option>
         <option value="F" >F </option>
-        <option value="F#">F&sharp;</option>
+        <option value="F#">F#</option>
         <option value="G" >G </option>
-        <option value="G#">G&sharp;</option>
+        <option value="G#">G#</option>
         <option value="A" >A </option>
-        <option value="A#">A&sharp;s</option>
+        <option value="A#">A#</option>
         <option value="B" >B </option>
     </select>Root Note<br><br>
     <button id="ControlPanel_Btn" onclick="main()">Generate Scale</button>
 </div>
-<br><hr><br>
-<div id="Results">
+<br><hr><br><br>
 
-</div>
+<div id="Results"></div><br><br>
+<div id="Log"></div>
 
 </body>
 </html>
@@ -52,14 +87,17 @@
 // ##### DECL
 
 function clearOutput() {
-    Results.innerText = "";
+    Log.innerText = "";
+    while (Results.firstChild) {
+        Results.removeChild(Results.firstChild);
+    }
 }
 
 function log(type, msg) {    
     var elemToAppend = document.createElement(type);
     elemToAppend.innerText = msg;
-    Results.appendChild(elemToAppend);
-    Results.appendChild(document.createElement('br'));
+    Log.appendChild(elemToAppend);
+    Log.appendChild(document.createElement('br'));
 }
 
 function debug(msg) {
@@ -78,10 +116,7 @@ function print(msg) {
 }
 
 function arrToString(arr) {
-    return arr.toLocaleString()
-              .replaceAll(",",", ")
-              .replaceAll("#","♯")
-              .replaceAll("b","♭");
+    return arr.toLocaleString().replaceAll(",",", ");
 }
 
 function getRandomInt(min, max) {
@@ -256,7 +291,12 @@ function main() {
         warn("Note-naming when allowing consequitve semitones is tricky, so this might be off");
     }
     notes = intervalsToNotes(intervalArr, ControlPanel_RootNote.value);
-    print("Notes     [" + arrToString(notes)       + "]");
+    // print("Notes     [" + arrToString(notes)       + "]");
+    notes.forEach(note => {
+        var elemToAppend = document.createElement('note');
+        elemToAppend.innerText = note;
+        Results.appendChild(elemToAppend);
+    });
 
     debug("=============");
     scaleName = nameScale(ControlPanel_RootNote.value, intervalArr);
